--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="texto">
                 <h2>Cierres Lynsa</h2>
                 <br>
-                <p>En Cierres Lynsa trabajamos hace mas de 50 años para mejor la calidad de nuestros productos, para ser hoy la empresa numero uno en cierres a cremallera de todo el mercosur, abasteciendo a todo el mercado textil desde prendas para vestir, hasta mochilas, almohadas y carpas. </p>
+                <p>En Cierres Lynsa trabajamos hace mas de 50 años para mejorar la calidad de nuestros productos, para ser hoy la empresa numero uno en cierres a cremallera de todo el mercosur, abasteciendo a todo el mercado textil desde prendas para vestir, hasta mochilas, almohadas y carpas. </p>
             </div>
             <a href="#" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
         </main>
