--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="texto">
                 <h2>Cierres Lynsa</h2>
                 <br>
-                <p>En Cierres Lynsa trabajamos hace mas de 50 años para mejor la calidad de nuestros productos, para ser hoy la empresa numero uno en cierres a cremallera de todo el mercosur, abasteciendo a todo el mercado textil desde prendas para vestir, hasta mochilas, almohadas y carpas. </p>
+                <p>Cierres Lynsa, desarrolla actividades en el mercado textil por mas de 50 años, produciendo cierres a cremallera para prendas de vestir, calzado, fundas para almohas y carpas <br> Trabajamos cada dia con el fin de mejorar nuestro producto y poder odrecer a nuestros clientes un producto de caliad. </p>
             </div>
             <a href="#" class="whatsapp" target="_blank"> <i class="fa fa-whatsapp whatsapp-icon"></i></a>
         </main>
