--- a/pages/productos.html
+++ b/pages/productos.html
@@ -31,17 +31,106 @@
         <h1>Productos</h1>
     </div>
     <main>
-        <div class="grid-containerimg">
-            <div><img src="../img/4mm.jpg" alt="4mm"></div>
-            <div><img src="../img/6fijo.jpg" alt="6 fijo"></div>
-            <div><img src="../img/6niquel.jpg" alt="6 niquel"></div>
-            <div><img src="../img/6sep.jpg" alt="6 separable"></div>
-            <div><img src="../img/alum.jpg" alt="aluminio"></div>
-            <div><img src="../img/cad6.jpg" alt="Cadena 6"></div>
-            <div><img src="../img/ddp.jpg" alt="Diente de Perro"></div>
-            <div><img src="../img/deslizador.jpg" alt="Deslizadores"></div>
-            <div><img src="../img/metalicos.jpg" alt="Metalicos"></div>
-        </div>
+        <!--
+        <div class="row">
+            <div class="col-lg-1 col-md-4 col-xs-6">
+                <div><img src="../img/4mm.jpg" alt="4mm"></div>
+                <div><img src="../img/6fijo.jpg" alt="6 fijo"></div>
+                <div><img src="../img/6niquel.jpg" alt="6 niquel"></div>
+                <div><img src="../img/6sep.jpg" alt="6 separable"></div>
+                <div><img src="../img/alum.jpg" alt="aluminio"></div>
+                <div><img src="../img/cad6.jpg" alt="Cadena 6"></div>
+                <div><img src="../img/ddp.jpg" alt="Diente de Perro"></div>
+                <div><img src="../img/deslizador.jpg" alt="Deslizadores"></div>
+                <div><img src="../img/metalicos.jpg" alt="Metalicos"></div>
+            </div>
+        </div>-->
+
+        <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a short card.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+          
+         
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a short card.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+              </div>
+            </div>
+          </div>
     </main>
     <!--PIE DE PAGINA-->
     <div class="footer">
